2006-02-24  Sven Neumann  <sven@gimp.org>

	* app/config/gimprc.c (gimp_rc_save)
	* app/gui/session.c (session_save): s/The GIMP/GIMP/

2006-02-24  Simon Budig  <simon@gimp.org>

	* app/base/lut-funcs.c: change the LUT function for the contrast.
	Fixes the buggy behaviour as described in bug #319872 and
	bug #332068 and makes the behaviour consistent with the standard
	contrast formula. However, I am leaving the bug open to discuss
	further improvements.

	Untabbified.

2006-02-23  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpwire.[ch]: added utility functions to send
	GimpRGB values over the wire.

	* libgimpbase/gimpprotocol.c: use the new functions.

2006-02-22  Simon Budig  <simon@gimp.org>

	* app/vectors/gimpvectors-import.c: fix the import of svg circles.

2006-02-21  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/Makefile.am
	* app/plug-in/plug-in-data.[ch]: new files which keep the
	plug-in data list.

	* app/pdb/procedural_db.[ch]: removed here, it only cluttered the
	file with unrelated functionality.

	* app/core/gimp.[ch]
	* app/actions/plug-in-commands.c
	* tools/pdbgen/pdb/procedural_db.pdb: changed accordingly.

	* app/pdb/procedural_db_cmds.c: regenerated.

2006-02-20  Michael Natterer  <mitch@gimp.org>

	* app/actions/file-actions.c (file_actions_setup)
	* app/actions/plug-in-actions.c (plug_in_actions_setup): use ""
	instead of NULL for "no label" on an action (we can't rely on the
	stock item to provide the label that prevents the gtk warning from
	firing).

2006-02-20  Karine Delvare  <kdelvare@nerim.net>

	* app/tools/gimprectangletool.c: zero division check should be
	changed according to the aspect redefinition

2006-02-20  Simon Budig  <simon@gimp.org>

	* app/tools/gimppaintoptions-gui.c: allow maximum jitter of 5.0.

2006-02-20  Sven Neumann  <sven@gimp.org>

	* app/config/gimpcoreconfig.[ch]
	* app/config/gimprc-blurbs.h
	* app/core/gimp.[ch]: keep a history of recently used plug-ins.
