@@ -1,3 +1,8 @@
+2006-02-25  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpimage-convert.c (generate_histogram_gray): only
+	count pixels with an alpha value > 127.
+
 2006-02-24  Sven Neumann  <sven@gimp.org>
 
 	* app/config/gimprc.c (gimp_rc_save)
